# ai-mock-interview

./: .dockerignore  .env.example  .gitignore  .ruff.toml  CLAUDE.md  Dockerfile  Makefile  README.md  debug_elevenlabs_stt.py  docker-compose.yml  download_models.py  entrypoint.sh  pyproject.toml  requirements.txt  ruff.toml  test_audio.html  test_elevenlabs_api.py  test_tts_browser.md  test_websocket.py
.github/workflows/: ruff.yml
apps/core/: admin.py  consumers.py  elevenlabs_service.py  elevenlabs_stt_service.py  elevenlabs_tts_service.py  forms.py  interview_consumer.py  llm_analyzer.py  models.py  resources.py  routing.py  services.py  stt_pb2.py  stt_pb2_grpc.py  stt_service_pb2.py  stt_service_pb2_grpc.py  tts_service.py  urls.py  views.py  whisper_service.py
apps/core/migrations/: 0001_initial.py  0002_chatsession_message.py
apps/core/templates/: chat.html  index.html  interview.html  test_tts.html
apps/core/templates/admin/: base.html
apps/interviews/: models.py
apps/interviews/migrations/: 0001_initial.py  0002_answer_detailed_analysis.py  0003_remove_answer_expert_answer_delete_expertanswer.py
apps/questions/: admin.py  models.py  resources.py
apps/questions/management/commands/: export_questions.py
apps/questions/migrations/: 0001_initial.py
config/: asgi.py  settings.py  urls.py
core/: consumers.py  models.py  routing.py  urls.py  utils.py  views.py
core/templates/: chat.html  chats.html  home.html
questions/: models.py
static/: main.js
static/css/: chat.css
static/js/: chat.js
templates/core/: base.html  chat.html  chat_sessions.html  home.html
