[project]
name = "ai-mock-interview"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.3",
    "psycopg2-binary>=2.9.10",
    "asgiref==3.8.1",
    "django-environ==0.12.0",
    "ruff==0.11.13",
    "sqlparse==0.5.3",
    "channels-redis>=4.2.1",
    "channels[daphne]>=4.2.2",
    "django-mptt>=0.17.0",
    "langchain-openai>=0.3.25",
    "langchain-core>=0.3.66",
    "langchain>=0.3.26",
    "django-widget-tweaks>=1.5.0",
    "django-markdownify>=0.9.5",
]
