[project]
name = "ai-mock-interview"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.3",
    "psycopg2-binary>=2.9.10",
    "asgiref==3.8.1",
    "django-environ==0.12.0",
    "sqlparse==0.5.3",
    "django-mptt>=0.17.0",
    "ruff>=0.12.1",
]
